@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-06T00:35:05Z",
-  "count_outdated" : 480,
-  "uniques_outdated" : 309,
+  "timestamp" : "2024-02-07T00:33:57Z",
+  "count_outdated" : 481,
+  "uniques_outdated" : 310,
   "count" : 484,
   "uniques" : 313,
   "clones" : [
-    {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-31T00:00:00Z",
       "count": 1,
